--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
-  <title>2048 Bilangan Prima</title>
+  <title>2048 Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>2048 Prime</h1>
+  <h1>2048 Game</h1>
   <div id="game-board"></div>
-  <p>Gunakan tombol panah (↑ ↓ ← →) untuk bermain.</p>
+  <p>Gunakan panah keyboard (← ↑ ↓ →) untuk bermain</p>
   <script src="main.js"></script>
 </body>
 </html>
