--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="manifest" href="manifest.json">
   <meta charset="UTF-8">
   <title>2048 Game</title>
   <link rel="stylesheet" href="style.css">
