--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="manifest" href="manifest.json">
   <meta charset="UTF-8">
+  <meta name="theme-color" content="#bbada0">
   <title>2048 Game</title>
   <link rel="stylesheet" href="style.css">
 </head>
