--- a/index.html
+++ b/index.html
@@ -1,16 +1,198 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html><html lang="id">
 <head>
-  <link rel="manifest" href="manifest.json">
   <meta charset="UTF-8">
-  <meta name="theme-color" content="#bbada0">
-  <title>2048 Game</title>
-  <link rel="stylesheet" href="style.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>2048 Bilangan Prima</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      background: #f8f8f8;
+    }
+    #game-board {
+      width: 320px;
+      height: 320px;
+      margin: 20px auto;
+      display: grid;
+      grid-template-columns: repeat(4, 1fr);
+      grid-template-rows: repeat(4, 1fr);
+      gap: 5px;
+    }
+    .tile {
+      width: 100%;
+      height: 100%;
+      background: #ccc;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 24px;
+      font-weight: bold;
+      border-radius: 8px;
+    }
+  </style>
 </head>
 <body>
-  <h1>2048 Game</h1>
-  <div id="game-board"></div>
-  <p>Gunakan panah keyboard (← ↑ ↓ →) untuk bermain</p>
-  <script src="main.js"></script>
-</body>
+  <h1>2048 Bilangan Prima</h1>
+  <div id="game-board"></div>  <script>
+    const board = document.getElementById("game-board");
+    let grid = [];
+
+    function createEmptyBoard() {
+      grid = [];
+      for (let i = 0; i < 4; i++) {
+        grid[i] = [];
+        for (let j = 0; j < 4; j++) {
+          grid[i][j] = 0;
+        }
+      }
+    }
+
+    function drawBoard() {
+      board.innerHTML = "";
+      for (let i = 0; i < 4; i++) {
+        for (let j = 0; j < 4; j++) {
+          const tile = document.createElement("div");
+          tile.classList.add("tile");
+          tile.textContent = grid[i][j] === 0 ? "" : grid[i][j];
+          board.appendChild(tile);
+        }
+      }
+    }
+
+    function addRandomTile() {
+      let empty = [];
+      for (let i = 0; i < 4; i++) {
+        for (let j = 0; j < 4; j++) {
+          if (grid[i][j] === 0) empty.push({ x: i, y: j });
+        }
+      }
+      if (empty.length === 0) return;
+
+      let spot = empty[Math.floor(Math.random() * empty.length)];
+      grid[spot.x][spot.y] = Math.random() < 0.9 ? 2 : 4;
+    }
+
+    function slide(row) {
+      let arr = row.filter(val => val);
+      for (let i = 0; i < arr.length - 1; i++) {
+        if (arr[i] === arr[i + 1]) {
+          arr[i] *= 2;
+          arr[i + 1] = 0;
+        }
+      }
+      return [...arr.filter(val => val), ...Array(4 - arr.filter(val => val).length).fill(0)];
+    }
+
+    function rotateGrid() {
+      let newGrid = [];
+      for (let i = 0; i < 4; i++) {
+        newGrid[i] = [];
+        for (let j = 0; j < 4; j++) {
+          newGrid[i][j] = grid[j][3 - i];
+        }
+      }
+      grid = newGrid;
+    }
+
+    function moveLeft() {
+      for (let i = 0; i < 4; i++) {
+        grid[i] = slide(grid[i]);
+      }
+    }
+
+    function moveRight() {
+      for (let i = 0; i < 4; i++) {
+        grid[i] = slide(grid[i].reverse()).reverse();
+      }
+    }
+
+    function moveUp() {
+      rotateGrid();
+      moveLeft();
+      rotateGrid(); rotateGrid(); rotateGrid();
+    }
+
+    function moveDown() {
+      rotateGrid();
+      moveRight();
+      rotateGrid(); rotateGrid(); rotateGrid();
+    }
+
+    function isGameOver(g) {
+      for (let y = 0; y < 4; y++) {
+        for (let x = 0; x < 4; x++) {
+          const current = g[y][x];
+          if (current === 0) return false;
+          if (x < 3 && current === g[y][x + 1]) return false;
+          if (y < 3 && current === g[y + 1][x]) return false;
+        }
+      }
+      return true;
+    }
+
+    function copyGrid(g) {
+      return g.map(row => row.slice());
+    }
+
+    function gridsAreEqual(a, b) {
+      return JSON.stringify(a) === JSON.stringify(b);
+    }
+
+    function handleKey(e) {
+      const oldGrid = copyGrid(grid);
+      switch (e.key) {
+        case "ArrowLeft": moveLeft(); break;
+        case "ArrowRight": moveRight(); break;
+        case "ArrowUp": moveUp(); break;
+        case "ArrowDown": moveDown(); break;
+        default: return;
+      }
+      if (!gridsAreEqual(oldGrid, grid)) {
+        addRandomTile();
+        drawBoard();
+        if (isGameOver(grid)) {
+          alert("Game Over! Tidak ada langkah lagi.");
+        }
+      }
+    }
+
+    document.addEventListener("keydown", handleKey);
+
+    // Swipe support untuk layar sentuh
+    let startX, startY;
+    document.addEventListener("touchstart", function(e) {
+      startX = e.touches[0].clientX;
+      startY = e.touches[0].clientY;
+    });
+
+    document.addEventListener("touchend", function(e) {
+      const endX = e.changedTouches[0].clientX;
+      const endY = e.changedTouches[0].clientY;
+      const dx = endX - startX;
+      const dy = endY - startY;
+
+      const oldGrid = copyGrid(grid);
+
+      if (Math.abs(dx) > Math.abs(dy)) {
+        if (dx > 30) moveRight();
+        else if (dx < -30) moveLeft();
+      } else {
+        if (dy > 30) moveDown();
+        else if (dy < -30) moveUp();
+      }
+
+      if (!gridsAreEqual(oldGrid, grid)) {
+        addRandomTile();
+        drawBoard();
+        if (isGameOver(grid)) {
+          alert("Game Over! Tidak ada langkah lagi.");
+        }
+      }
+    });
+
+    createEmptyBoard();
+    addRandomTile();
+    addRandomTile();
+    drawBoard();
+  </script></body>
 </html>
