--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
-<!DOCTYPE html><html lang="id">
+<!DOCTYPE html>
+<html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>2048 Bilangan Prima</title>
   <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      overflow: hidden;      /* Mencegah scroll yang memicu refresh */
+      touch-action: none;    /* Mencegah swipe bawaan browser */
+    }
+
     body {
       font-family: sans-serif;
       text-align: center;
       background: #f8f8f8;
     }
+
     #game-board {
       width: 320px;
       height: 320px;
@@ -18,6 +27,7 @@
       grid-template-rows: repeat(4, 1fr);
       gap: 5px;
     }
+
     .tile {
       width: 100%;
       height: 100%;
@@ -33,7 +43,9 @@
 </head>
 <body>
   <h1>2048 Bilangan Prima</h1>
-  <div id="game-board"></div>  <script>
+  <div id="game-board"></div>
+
+  <script>
     const board = document.getElementById("game-board");
     let grid = [];
 
@@ -73,14 +85,18 @@
     }
 
     function slide(row) {
-      let arr = row.filter(val => val);
+      let arr = row.filter(val => val !== 0);
       for (let i = 0; i < arr.length - 1; i++) {
         if (arr[i] === arr[i + 1]) {
           arr[i] *= 2;
           arr[i + 1] = 0;
         }
       }
-      return [...arr.filter(val => val), ...Array(4 - arr.filter(val => val).length).fill(0)];
+      arr = arr.filter(val => val !== 0);
+      while (arr.length < 4) {
+        arr.push(0);
+      }
+      return arr;
     }
 
     function rotateGrid() {
@@ -102,7 +118,7 @@
 
     function moveRight() {
       for (let i = 0; i < 4; i++) {
-        grid[i] = slide(grid[i].reverse()).reverse();
+        grid[i] = slide(grid[i].slice().reverse()).reverse();
       }
     }
 
@@ -139,6 +155,10 @@
     }
 
     function handleKey(e) {
+      if (["ArrowLeft", "ArrowRight", "ArrowUp", "ArrowDown"].includes(e.key)) {
+        e.preventDefault(); // Cegah scroll/refresh
+      }
+
       const oldGrid = copyGrid(grid);
       switch (e.key) {
         case "ArrowLeft": moveLeft(); break;
@@ -147,6 +167,7 @@
         case "ArrowDown": moveDown(); break;
         default: return;
       }
+
       if (!gridsAreEqual(oldGrid, grid)) {
         addRandomTile();
         drawBoard();
@@ -163,7 +184,7 @@
     document.addEventListener("touchstart", function(e) {
       startX = e.touches[0].clientX;
       startY = e.touches[0].clientY;
-    });
+    }, { passive: false });
 
     document.addEventListener("touchend", function(e) {
       const endX = e.changedTouches[0].clientX;
@@ -188,11 +209,12 @@
           alert("Game Over! Tidak ada langkah lagi.");
         }
       }
-    });
+    }, { passive: false });
 
     createEmptyBoard();
     addRandomTile();
     addRandomTile();
     drawBoard();
-  </script></body>
+  </script>
+</body>
 </html>
