--- a/index.html
+++ b/index.html
@@ -2,22 +2,14 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>2048 Bilangan Prima</title>
   <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      overflow: hidden;
-      touch-action: none;
-    }
-
     body {
       font-family: sans-serif;
       text-align: center;
       background: #f8f8f8;
     }
-
     #game-board {
       width: 320px;
       height: 320px;
@@ -27,7 +19,6 @@
       grid-template-rows: repeat(4, 1fr);
       gap: 5px;
     }
-
     .tile {
       width: 100%;
       height: 100%;
@@ -38,10 +29,8 @@
       font-size: 24px;
       font-weight: bold;
       border-radius: 8px;
-      transition: background 0.2s, transform 0.2s;
+      transition: background 0.2s ease;
     }
-
-    /* Warna berdasarkan nilai */
     .tile-2    { background: #eee4da; color: #776e65; }
     .tile-4    { background: #ede0c8; color: #776e65; }
     .tile-8    { background: #f2b179; color: #f9f6f2; }
@@ -53,12 +42,13 @@
     .tile-512  { background: #edc850; color: #f9f6f2; font-size: 20px; }
     .tile-1024 { background: #edc53f; color: #f9f6f2; font-size: 18px; }
     .tile-2048 { background: #edc22e; color: #f9f6f2; font-size: 18px; }
+    .tile-4096 { background: #3c3a32; color: #ffffff; }
+    .tile-8192 { background: #1f1d1a; color: #ffffff; }
   </style>
 </head>
 <body>
   <h1>2048 Bilangan Prima</h1>
   <div id="game-board"></div>
-
   <script>
     const board = document.getElementById("game-board");
     let grid = [];
@@ -79,11 +69,13 @@
         for (let j = 0; j < 4; j++) {
           const tile = document.createElement("div");
           tile.classList.add("tile");
+
           const val = grid[i][j];
           if (val !== 0) {
             tile.textContent = val;
-            tile.classList.add("tile-" + val);
+            tile.classList.add(`tile-${val}`);
           }
+
           board.appendChild(tile);
         }
       }
@@ -97,20 +89,19 @@
         }
       }
       if (empty.length === 0) return;
-
       let spot = empty[Math.floor(Math.random() * empty.length)];
       grid[spot.x][spot.y] = Math.random() < 0.9 ? 2 : 4;
     }
 
     function slide(row) {
-      let arr = row.filter(val => val !== 0);
+      let arr = row.filter(val => val);
       for (let i = 0; i < arr.length - 1; i++) {
         if (arr[i] === arr[i + 1]) {
           arr[i] *= 2;
           arr[i + 1] = 0;
         }
       }
-      arr = arr.filter(val => val !== 0);
+      arr = arr.filter(val => val);
       while (arr.length < 4) arr.push(0);
       return arr;
     }
@@ -134,7 +125,7 @@
 
     function moveRight() {
       for (let i = 0; i < 4; i++) {
-        grid[i] = slide(grid[i].slice().reverse()).reverse();
+        grid[i] = slide(grid[i].reverse()).reverse();
       }
     }
 
@@ -171,10 +162,7 @@
     }
 
     function handleKey(e) {
-      if (["ArrowLeft", "ArrowRight", "ArrowUp", "ArrowDown"].includes(e.key)) {
-        e.preventDefault();
-      }
-
+      e.preventDefault(); // Mencegah scroll / refresh
       const oldGrid = copyGrid(grid);
       switch (e.key) {
         case "ArrowLeft": moveLeft(); break;
@@ -183,7 +171,6 @@
         case "ArrowDown": moveDown(); break;
         default: return;
       }
-
       if (!gridsAreEqual(oldGrid, grid)) {
         addRandomTile();
         drawBoard();
@@ -195,6 +182,7 @@
 
     document.addEventListener("keydown", handleKey);
 
+    // Swipe support untuk layar sentuh
     let startX, startY;
     document.addEventListener("touchstart", function(e) {
       startX = e.touches[0].clientX;
@@ -202,6 +190,7 @@
     }, { passive: false });
 
     document.addEventListener("touchend", function(e) {
+      e.preventDefault(); // Hindari refresh saat swipe
       const endX = e.changedTouches[0].clientX;
       const endY = e.changedTouches[0].clientY;
       const dx = endX - startX;
