--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
   <title>2048 Bilangan Prima</title>
   <style>
     body {
+    height: 100%;
+    margin: 0;
+    overflow: hidden; /* Ini penting */
+    touch-action: none; /* Mencegah gesture bawaan */
+  }
+
+  body {
+    font-family: sans-serif;
+    text-align: center;
+    background: #f8f8f8;
+  }
+  
+    body {
       font-family: sans-serif;
       text-align: center;
       background: #f8f8f8;
