--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>2048 Bilangan Prima</title>
+  <title>2048 maden</title>
   <style>
     body {
     height: 100%;
@@ -15,13 +15,13 @@
   body {
     font-family: sans-serif;
     text-align: center;
-    background: #f8f8f8;
+    background: #1f1d1a;
   }
   
     body {
       font-family: sans-serif;
       text-align: center;
-      background: #f8f8f8;
+      background: #1f1d1a;
     }
     #game-board {
       width: 320px;
@@ -60,7 +60,7 @@
   </style>
 </head>
 <body>
-  <h1>2048 Bilangan Prima</h1>
+  <h1>2048 maden </h1>
   <div id="game-board"></div>
   <script>
     const board = document.getElementById("game-board");
