--- a/index.html
+++ b/index.html
@@ -15,14 +15,10 @@
   body {
     font-family: sans-serif;
     text-align: center;
-    background: #1f1d1a;
+    background-color: rgba (0, 0, 255, 0,5);
   }
   
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      background: #1f1d1a;
-    }
+    
     #game-board {
       width: 320px;
       height: 320px;
