--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
     addRandomTile();
     addRandomTile();
     drawBoard();
+    if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("service-worker.js");
+    }
   </script>
 </body>
 </html>
