--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 <body>
   <h1>2048 maden </h1>
   <div id="game-board"></div>
+  <p id="score">Score: 0</p>
   <script>
     const board = document.getElementById("game-board");
     let grid = [];
