--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <h1>2048 maden </h1>
   <div id="game-board"></div>
   <p id="score">Score: 0</p>
+  <audio id="suara" src="merge.wav" autoplay></audio>
   <script>
     const board = document.getElementById("game-board");
     let grid = [];
