--- a/index.html
+++ b/index.html
@@ -64,7 +64,10 @@
   <h1>2048 maden </h1>
   <div id="game-board"></div>
   <p id="score">Score: 0</p>
-  <audio id="suara" src="merge.wav" autoplay></audio>
+  <audio id="suara" src="gabung.wav" autoplay></audio>
+  <audio id="suara" src="geser.wav" autoplay></audio>
+  <audio id="suara" src="kalah.wav" autoplay></audio>
+  <audio id="suara" src="menang.wav" autoplay></audio>
   <script>
     const board = document.getElementById("game-board");
     let grid = [];
