--- a/index.html
+++ b/index.html
@@ -65,6 +65,16 @@
             cursor: pointer;
             margin: 0 5px;
         }
+        .grid-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  width: 100%;
+  max-width: 400px;
+}
+.tile {
+  font-size: calc(10px + 2vw); /* agar teks mengecil di layar kecil */
+}
         
         .grid-container {
             background: #bbada0;
