--- a/index.html
+++ b/index.html
@@ -313,6 +313,21 @@ function playSound() {
   oscillator.start();
   oscillator.stop(audioCtx.currentTime + 0.1);
 }
+    const mergeSound = document.getElementById("merge-sound");
+
+// iOS/Chrome membutuhkan interaksi untuk aktivasi
+function unlockAudio() {
+  mergeSound.muted = false;
+  mergeSound.play().then(() => {
+    mergeSound.pause();
+    mergeSound.currentTime = 0;
+  }).catch(() => {});
+  window.removeEventListener('click', unlockAudio);
+  window.removeEventListener('touchstart', unlockAudio);
+}
+
+window.addEventListener('click', unlockAudio, { once: true });
+window.addEventListener('touchstart', unlockAudio, { once: true });
   </script>
 </body>
 </html>
