--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@
     }
   </style>
 </head>
-<body>
   <audio id="merge-sound" src="https://cdn.jsdelivr.net/gh/sindresorhus/2048@gh-pages/sounds/merge.mp3" preload="auto"></audio>
+<body>
+  <audio id="merge-sound" src="https://freesound.org/data/previews/341/341695_5260877-lq.mp3" preload="auto"></audio>
   <div class="header">
     <h1>2048</h1>
     <div class="scores">
