--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
   </style>
 </head>
 <body>
-  <audio id="merge-sound" src="https://freesound.org/data/previews/511/511919_1667046-lq.mp3" preload="auto"></audio>  
-  <audio id="move-sound" src="https://freesound.org/data/previews/612/612092_1648170-lq.mp3" preload="auto"></audio>
-  <audio id="over-sound" src="https://freesound.org/data/previews/385/385050_5121236-lq.mp3"preload="auto"></audio>
+  <audio id="merge-sound" src="https://cdn.jsdelivr.net/gh/jwilson8767/javascript-2048/sounds/merge.mp3" preload="auto"></audio>
+<audio id="move-sound" src="https://cdn.jsdelivr.net/gh/jwilson8767/javascript-2048/sounds/move.mp3" preload="auto"></audio>
+<audio id="over-sound" src="https://cdn.jsdelivr.net/gh/jwilson8767/javascript-2048/sounds/gameover.mp3" preload="auto"></audio>
   
   <div class="header">
     <h1>2048</h1>
